Bug 481281 - Scanning of boarding pass from Air Europa does not show the boarding time nor the departure time.
Summary: Scanning of boarding pass from Air Europa does not show the boarding time nor...
Status: RESOLVED FIXED
Alias: None
Product: KDE Itinerary
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-12 23:34 UTC by cquike
Modified: 2024-02-17 14:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cquike 2024-02-12 23:34:32 UTC
SUMMARY
Scanning of boarding pass from Air Europa does not show the boarding time nor the departure time.  


STEPS TO REPRODUCE
1.  Import an Air Europa boarding pass in PDF

OBSERVED RESULT

The trip is imported, but it does not show the departure or boarding time.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian testing
Itinerary 22.12.3

ADDITIONAL INFORMATION
I can provide PDF if needed.
Comment 1 Volker Krause 2024-02-13 17:41:11 UTC
If you tried to import the PDF I'd indeed need the file in order to see what we can do about it (email to vkrause@kde.org). If you tried scanning the barcode then this is unfortunately the expected result, boarding pass barcodes don't contain travel times.
Comment 2 cquike 2024-02-13 20:48:04 UTC
I have scanned the PDF. I will email it.
Thanks!
Comment 3 Volker Krause 2024-02-14 18:24:19 UTC
Git commit e7959d64e27a98ca2d6ed22dcdabe730aee4995d by Volker Krause.
Committed on 14/02/2024 at 18:20.
Pushed by vkrause into branch 'master'.

Handle time quadruples in the generic boarding pass extractor

This now also covers the cases check-in or baggage drop close and/or gate
close times. Not all variations with this wrapping around at midnight are
implemented though lacking corresponding samples.

While at it, also use chrono types more consistently in the associated
code.

M  +49   -18   src/lib/extractors/genericboardingpassextractor.cpp
M  +4    -4    src/lib/flightpostprocessor.cpp
M  +2    -1    src/lib/flightpostprocessor_p.h
M  +4    -4    src/lib/flightutil.cpp
M  +3    -1    src/lib/flightutil_p.h

https://invent.kde.org/pim/kitinerary/-/commit/e7959d64e27a98ca2d6ed22dcdabe730aee4995d
Comment 4 Volker Krause 2024-02-14 18:39:16 UTC
Git commit b3f8b6dbbc10d9b439b33dfe5e474c3f762676cc by Volker Krause.
Committed on 14/02/2024 at 18:33.
Pushed by vkrause into branch 'release/24.02'.

Handle time quadruples in the generic boarding pass extractor

This now also covers the cases check-in or baggage drop close and/or gate
close times. Not all variations with this wrapping around at midnight are
implemented though lacking corresponding samples.

While at it, also use chrono types more consistently in the associated
code.
(cherry picked from commit e7959d64e27a98ca2d6ed22dcdabe730aee4995d)

M  +49   -18   src/lib/extractors/genericboardingpassextractor.cpp
M  +4    -4    src/lib/flightpostprocessor.cpp
M  +2    -1    src/lib/flightpostprocessor_p.h
M  +4    -4    src/lib/flightutil.cpp
M  +3    -1    src/lib/flightutil_p.h

https://invent.kde.org/pim/kitinerary/-/commit/b3f8b6dbbc10d9b439b33dfe5e474c3f762676cc
Comment 5 cquike 2024-02-17 14:54:44 UTC
I just wanted to mention that I have installed a Android version from yesterday and I can confirm that is working fine! 
Thank you very much for the quick update!