Handle time quadruples in the generic boarding pass extractor

This now also covers the cases check-in or baggage drop close and/or gate
close times. Not all variations with this wrapping around at midnight are
implemented though lacking corresponding samples.

While at it, also use chrono types more consistently in the associated
code.

BUG: 481281
(cherry picked from commit e7959d64e27a98ca2d6ed22dcdabe730aee4995d)